syntax="proto3";

package client;

import "model/model.proto";

message ClientRequest{
    string UUID=1;
}

message Empty{

}

message Config{
    bytes Config=1;
}

message UpdateRequest{
    string UUID=1;
    model.Client client=2;
}

service ClientService{
    rpc GetClientInformation(ClientRequest) returns (model.Response);
    rpc RegisterClient(model.Client) returns (model.Response);
    rpc UpdateClient(UpdateRequest) returns (model.Response);
    rpc DeleteClient(ClientRequest) returns (model.Response);
    rpc GetClients(Empty) returns (model.Response);
}
